Change get(0) to getFirst() for better understanding. Make the attemptHold() method in CurrentBrick Controller void.